<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutToolBar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:paddingHorizontal="24dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="21dp"
            android:background="@drawable/border_layout"
            android:backgroundTint="@color/primary_layout_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:src="@drawable/chevron_left"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutVisibility"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="21dp"
            android:background="@drawable/border_layout"
            android:backgroundTint="@color/primary_layout_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/layoutSave"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:src="@drawable/visibility"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutSave"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/border_layout"
            android:backgroundTint="@color/primary_layout_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:src="@drawable/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutToolBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp">

            <EditText
                android:id="@+id/edtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:autofillHints="@null"
                android:background="@null"
                android:hint="@string/title"
                android:inputType="textMultiLine"
                android:minHeight="65dp"
                android:singleLine="false"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/secondary_text"
                android:textSize="40sp"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edtContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:autofillHints="@null"
                android:background="@null"
                android:hint="@string/type_something"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:singleLine="false"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/secondary_text"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/edtTitle" />

            <LinearLayout
                android:id="@+id/layoutAddImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="86dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/edtContent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/border_round"
                    android:backgroundTint="@color/secondary_text">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:contentDescription="@null"
                        android:src="@drawable/add" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="11dp"
                    android:text="@string/add_a_featured_photo"
                    android:textColor="@color/secondary_text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/layoutAddImage">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/border_round"
                    android:backgroundTint="@color/secondary_text">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:contentDescription="@null"
                        android:src="@drawable/add" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/tvNotification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="11dp"
                    android:text="@string/add_a_notification"
                    android:textColor="@color/secondary_text" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>